--- a/app/src/main/res/layout/activity_pdfview_ditolak_disetujui.xml
+++ b/app/src/main/res/layout/activity_pdfview_ditolak_disetujui.xml
@@ -41,34 +41,73 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/btnDistribusi"
-            android:background="@color/colorAccept"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentBottom="true">
 
             <LinearLayout
+                android:id="@+id/btnDitolak"
                 android:orientation="horizontal"
+                android:background="@color/colorReject"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true">
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:layout_weight="1">
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_BOLD"
                     android:textColor="@color/white"
                     android:textSize="@dimen/space_14"
-                    android:text="DISETUJUI"
+                    android:text="Ditolak"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="fill_vertical"
 
                     android:paddingRight="@dimen/space_5"/>
 
+                <ImageView
+                    android:src="@drawable/cancel"
+                    android:layout_marginLeft="@dimen/space_14"
+                    android:layout_gravity="fill_vertical"
+                    android:layout_width="@dimen/space_20"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView17" />
             </LinearLayout>
-        </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/btnDisetujui"
+                android:orientation="horizontal"
+                android:background="@color/colorAccept"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:layout_weight="1">
+
+                <ui.CustomtextView
+                    font:name = "GOTHAM_BOLD"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/space_14"
+                    android:text="Disetujui"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="fill_vertical"
+
+                    android:paddingRight="@dimen/space_5"/>
+
+                <ImageView
+                    android:src="@drawable/check32"
+                    android:layout_marginLeft="@dimen/space_14"
+                    android:layout_gravity="fill_vertical"
+                    android:layout_width="@dimen/space_20"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </LinearLayout>
 
     </RelativeLayout>
 </LinearLayout>
