--- a/app/src/main/res/layout/activity_pdfview_recall.xml
+++ b/app/src/main/res/layout/activity_pdfview_recall.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,42 +20,12 @@
         <RelativeLayout
             android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/space_5">
-
-            <RelativeLayout
-                android:textSize="@dimen/space_14"
-                android:text="Disetujui"
-                android:background="@drawable/btn_shape_all_recall"
-                android:layout_width="200dp"
-                android:layout_height="@dimen/space_35"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/space_25"
-                android:id="@+id/btnDistribusi"
-                android:gravity="fill_vertical"
-                android:layout_marginTop="@dimen/space_5"
-                android:paddingLeft="@dimen/space_20"
-                android:paddingRight="@dimen/space_20" >
-
-
-                <ImageView
-                    android:id="@+id/imgg_recall"
-                    android:src="@drawable/recall32"
-                    android:layout_width="@dimen/space_35"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true" />
-
-                <ui.CustomtextView
-                    font:name = "GOTHAM_MEDIUM"
-                    android:textColor="@color/white"
-                    android:text="Recall Dokumen"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@+id/imgg_recall"
-                    android:layout_toEndOf="@+id/imgg_recall" />
-
-            </RelativeLayout>
+            android:layout_height="422dp"
+            android:layout_marginLeft="@dimen/space_10"
+            android:layout_marginRight="@dimen/space_10"
+            android:layout_above="@+id/btnDistribusi"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/space_10">
 
             <com.github.barteksc.pdfviewer.PDFView
                 android:id="@+id/pdfView"
@@ -63,17 +34,50 @@
                 android:layout_marginLeft="@dimen/space_5"
                 android:layout_marginRight="@dimen/space_5"
                 android:background="@color/white"
-                android:layout_above="@+id/btnDistribusi"
-                android:layout_alignParentTop="true">
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true">
 
             </com.github.barteksc.pdfviewer.PDFView>
 
+
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/btnDistribusi"
+            android:background="@color/colorBottomNavigationInactive"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true">
+
+                <ImageView
+                    android:src="@drawable/recall32"
+                    android:layout_gravity="fill_vertical"
+                    android:layout_width="@dimen/space_20"
+                    android:layout_height="match_parent" />
+
+                <ui.CustomtextView
+                    font:name = "GOTHAM_BOLD"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/space_14"
+                    android:text="Recall Document"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="fill_vertical"
+
+                    android:paddingRight="@dimen/space_5"
+                    android:layout_marginLeft="@dimen/space_10" />
 
 
+            </LinearLayout>
+        </RelativeLayout>
 
     </RelativeLayout>
-
-
 </LinearLayout>
