--- a/app/src/main/res/layout/fragment_navigation_menu.xml
+++ b/app/src/main/res/layout/fragment_navigation_menu.xml
@@ -46,11 +46,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/space_60"
+        android:layout_height="@dimen/space_80"
         android:id="@+id/relativeLayout"
         android:background="@color/navigationDrawerBackgroundDetail"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/txtDate"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
@@ -61,9 +60,9 @@
             android:layout_alignTop="@+id/circleView"
             android:layout_toEndOf="@+id/circleView"
             android:layout_alignBottom="@+id/circleView"
-            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginTop="@dimen/space_22"
             android:layout_toRightOf="@+id/circleView"
-            android:layout_marginLeft="@dimen/space_5">
+            android:layout_marginLeft="@dimen/space_10">
 
             <ui.CustomtextView
                 font:name= "GOTHAM_BLACK"
@@ -95,9 +94,9 @@
             android:layout_height="match_parent"
             android:src="@drawable/logo_bp_batam"
             android:layout_alignParentTop="true"
-            android:layout_margin="@dimen/space_5"
-            android:layout_marginLeft="-10dp"
-            android:layout_width="50dp" />
+
+            android:layout_marginLeft="10dp"
+            android:layout_width="@dimen/space_60" />
 
         <View
             android:id="@+id/line"
