--- a/app/src/main/res/layout/fragment_disposisi_permohonan.xml
+++ b/app/src/main/res/layout/fragment_disposisi_permohonan.xml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:font="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/navigationDrawerBackgroundDetail">
+    android:background="@color/colorSecondaryBackground">
+
+    <RelativeLayout
+        android:textColor="@color/white"
+        android:background="@drawable/btn_shape_all_blue_search"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/space_45"
+        android:layout_margin="@dimen/space_5">
+
+        <ui.CustomEditText
+            android:id="@+id/text_search"
+            android:textColor="@color/white"
+            android:background="@color/transparant_pure"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_45"
+            android:textColorHint="@color/white"
+            android:hint="search"
+            android:layout_marginRight="@dimen/space_35"
+            android:layout_marginLeft="@dimen/space_3" />
+
+        <ImageView
+            android:src="@drawable/ic_search_white_32"
+            android:layout_width="@dimen/space_25"
+            android:layout_height="@dimen/space_25"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/space_5" />
+    </RelativeLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:font="http://schemas.android.com/apk/res-auto"
@@ -13,88 +40,85 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/space_10"
-        android:background="@drawable/btn_shape_header_red">
-
+        android:background="@drawable/btn_shape_white"
+        android:layout_marginBottom="@dimen/space_5"
+        android:layout_marginRight="@dimen/space_5"
+        android:layout_marginLeft="@dimen/space_5">
         <RelativeLayout
             android:id="@+id/contact_us_header_container"
             android:layout_width="fill_parent"
-            android:layout_height="@dimen/space_30"
+            android:layout_height="@dimen/space_40"
             android:minHeight="?attr/actionBarSize"
             android:layout_alignParentTop="true"
-            android:background="@drawable/btn_shape_header_red"
-            android:orientation="horizontal">
-
-
+            android:background="@drawable/btn_shape_white"
+            android:orientation="horizontal">>
             <ui.CustomtextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Permohonan"
-                android:textColor="@color/white"
-                android:textSize="@dimen/space_12"
+                android:textColor="@color/black"
+                android:textSize="@dimen/space_16"
                 android:textStyle="bold"
-                font:name="Label"
+                font:name="GOTHAM_BOLD"
                 font:type = "bold"
                 android:id="@+id/view2"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/imageView3"
-                android:layout_toEndOf="@+id/imageView3"
-                android:layout_marginLeft="@dimen/space_5" />
-
-            <ImageView
-                android:layout_width="@dimen/space_30"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView"
-                android:src="@drawable/gns_menu"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true" />
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="@dimen/space_150"
-                android:layout_height="@dimen/space_40"
-                android:background="@color/colorBottomNavigationNotification"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:tabGravity="fill"
-                app:tabIndicatorColor="@color/colorAccent"
-                app:tabIndicatorHeight="3dp"
-                app:tabMode="fixed"
-                app:tabPaddingBottom="-1dp"
-                app:tabPaddingEnd="-1dp"
-                app:tabPaddingStart="-1dp"
-                app:tabPaddingTop="-1dp"
-                font:tabTextColor="@color/white"
-                android:elevation="2dp"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/imageView"
-                android:layout_toStartOf="@+id/imageView">
-            </android.support.design.widget.TabLayout>
+                android:layout_marginLeft="@dimen/space_10"
+                android:layout_toEndOf="@+id/imageView14"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/imageView14"
+                android:layout_alignParentBottom="true"
+                android:gravity="fill_vertical" />
 
             <ImageView
                 android:layout_width="@dimen/space_25"
-                android:layout_height="@dimen/space_25"
-                android:id="@+id/imageView3"
-                android:src="@drawable/gns_email"
-                android:layout_centerVertical="true"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView14"
+                android:src="@drawable/ic_email_2"
+                android:tint="@color/black"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="@dimen/space_5" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true" />
         </RelativeLayout>
 
         <View
+            android:background="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/colorAccent" />
+            android:layout_height="1dp"/>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:background="@color/white"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_weight="1" >
-        </android.support.v4.view.ViewPager>
+        <android.support.v7.widget.RecyclerView
+            android:visibility="visible"
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/layout_download"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView9"
+                android:src="@drawable/pdf"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <com.ayz4sci.androidfactory.DownloadProgressView
+                android:layout_below="@+id/imageView9"
+                android:id="@+id/downloadProgressView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" />
+        </RelativeLayout>
+
     </LinearLayout>
-</RelativeLayout>
+
+
+
+</LinearLayout>
