--- a/app/src/main/res/layout/row_disposisi_pribadi.xml
+++ b/app/src/main/res/layout/row_disposisi_pribadi.xml
@@ -69,30 +69,29 @@
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/space_12"
                     android:maxLines="1"
-                    android:textStyle="italic"
                     android:layout_marginTop="-2dp"
+                    android:textSize="@dimen/space_12"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
                     android:layout_marginRight="@dimen/space_45"
-                    android:layout_marginLeft="@dimen/space_3"/>
+                    android:layout_marginLeft="@dimen/space_3" />
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_LIGHT"
-
-                    android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
+                    android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
+                    android:textSize="@dimen/space_12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lbl_attach"
                     android:maxLines="1"
+                    android:layout_marginLeft="@dimen/space_3"
                     android:layout_alignBottom="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
                     android:layout_marginRight="@dimen/space_45"
-                    android:layout_marginLeft="@dimen/space_3"
                     android:textStyle="italic" />
 
                 <ImageView
@@ -129,6 +128,16 @@
                 android:layout_toStartOf="@+id/text_time"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/text_time" />
+
+            <ImageView
+                android:layout_width="@dimen/space_40"
+                android:layout_height="@dimen/space_30"
+                android:id="@+id/imageView5"
+                android:src="@drawable/circle_cc"
+                android:layout_toLeftOf="@+id/btnPrint"
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_alignBottom="@+id/btnPrint"
+                android:layout_alignTop="@+id/btnPrint" />
 
             <RelativeLayout
                 android:id="@+id/btnPrint"
@@ -175,12 +184,12 @@
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
+                android:layout_width="120dp"
                 android:layout_height="@dimen/space_30"
                 android:layout_below="@+id/layout_attachment"
                 android:layout_marginTop="@dimen/space_3"
                 android:layout_alignRight="@+id/layout_attachment"
-                android:layout_alignEnd="@+id/layout_attachment"
-                android:layout_width="103dp">
+                android:layout_alignEnd="@+id/layout_attachment">
                 <ImageView
                     android:src="@drawable/downloadsave32"
                     android:layout_width="@dimen/space_25"
@@ -192,18 +201,14 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="onClick"
-                    android:text="lihat surat"
+                    android:text="  lihat dokumen"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_toEndOf="@+id/imageView16"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="@dimen/space_20" />
+                    android:layout_alignParentEnd="true" />
             </RelativeLayout>
 
         </RelativeLayout>
