--- a/app/src/main/res/layout/row_disposisi_riwayat.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat.xml
@@ -54,31 +54,59 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name="GOTHAM_LIGHT"
-                    android:textSize="@dimen/space_12"
-                    android:textStyle="italic"
+                    font:name = "GOTHAM_LIGHT"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_7"
-                    android:layout_marginLeft="@dimen/space_5"
-                    android:maxLines="1" />
+                    android:textSize="@dimen/space_12"
+                    android:maxLines="1"
+                    android:textStyle="italic"
+                    android:layout_marginTop="-2dp"
+                    android:layout_alignTop="@+id/imageView6"
+                    android:layout_toRightOf="@+id/imageView6"
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginRight="@dimen/space_45"
+                    android:layout_marginLeft="@dimen/space_3"/>
 
                 <ui.CustomtextView
-                    font:name="GOTHAM_LIGHT"
-                    android:textSize="@dimen/space_12"
-                    android:textStyle="italic"
-                    android:id="@+id/lbl_size"
+                    font:name = "GOTHAM_LIGHT"
+
+                    android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lbl_attach"
+                    android:maxLines="1"
+                    android:layout_alignBottom="@+id/imageView6"
+                    android:layout_toRightOf="@+id/imageView6"
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginRight="@dimen/space_45"
+                    android:layout_marginLeft="@dimen/space_3"
+                    android:textStyle="italic" />
+
+                <ImageView
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25"
+                    android:id="@+id/imageView6"
+                    android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:maxLines="1"
-                    android:layout_marginBottom="@dimen/space_7"
-                    android:layout_marginLeft="@dimen/space_5"/>
+                    android:src="@drawable/pdf"
+                    android:layout_marginLeft="@dimen/space_7"
+                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_marginBottom="@dimen/space_10" />
+
+                <ImageView
+                    android:visibility="gone"
+                    android:layout_width="@dimen/space_35"
+                    android:layout_height="@dimen/space_35"
+                    android:id="@+id/imageView15"
+                    android:layout_alignTop="@+id/lbl_attach"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/circle_kosong"
+                    android:layout_marginRight="@dimen/space_5" />
 
 
             </RelativeLayout>
