--- a/app/src/main/res/layout/row_disposisi_pribadi.xml
+++ b/app/src/main/res/layout/row_disposisi_pribadi.xml
@@ -108,14 +108,15 @@
 
                 <ImageView
                     android:visibility="gone"
-                    android:layout_width="@dimen/space_35"
-                    android:layout_height="@dimen/space_35"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25"
                     android:id="@+id/imageView15"
                     android:layout_alignTop="@+id/lbl_attach"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:src="@drawable/circle_kosong"
-                    android:layout_marginRight="@dimen/space_5" />
+                    android:layout_marginTop="@dimen/space_3"
+                    android:layout_marginRight="@dimen/space_10" />
 
 
             </RelativeLayout>
