--- a/app/src/main/res/layout/row_persuratan_pribadi.xml
+++ b/app/src/main/res/layout/row_persuratan_pribadi.xml
@@ -81,8 +81,8 @@
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_LIGHT"
-
-                    android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
+                    android:id="@+id/lbl_size"
+                    android:textSize="@dimen/space_12"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -109,14 +109,15 @@
 
                 <ImageView
                     android:visibility="gone"
-                    android:layout_width="@dimen/space_35"
-                    android:layout_height="@dimen/space_35"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25"
                     android:id="@+id/imageView15"
                     android:layout_alignTop="@+id/lbl_attach"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:src="@drawable/circle_kosong"
-                    android:layout_marginRight="@dimen/space_5" />
+                    android:layout_marginTop="@dimen/space_3"
+                    android:layout_marginRight="@dimen/space_10" />
 
 
             </RelativeLayout>
@@ -200,7 +201,6 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_toEndOf="@+id/imageView16"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="@dimen/space_20" />
