perubahan di shape login

--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
-        android:background="@color/colorSecondaryBackground"
+        android:background="@color/white"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/space_10"></android.support.v7.widget.RecyclerView>
 
