--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,14 +29,14 @@
             android:src="@drawable/logo_bp_batam" />
 
         <ui.CustomtextView
-            font:name="GOTHAM_MEDIUM"
+            font:name="GOTHAM_BOOK"
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/lupa_password"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:typeface="serif"
             android:layout_below="@+id/btn_login"
             android:layout_alignLeft="@+id/btn_login"
@@ -69,7 +69,7 @@
                 android:id="@+id/edt_username"
                 android:singleLine="true"
                 android:background="@color/transparant_pure"
-                android:textColorHint="@color/grey"
+                android:textColorHint="@color/colorSearch"
                 android:textSize="@dimen/space_14"
                 android:textColor="@color/black"
                 android:hint="Username"
@@ -102,7 +102,7 @@
                 android:id="@+id/edt_password"
                 android:singleLine="true"
                 android:background="@color/transparant_pure"
-                android:textColorHint="@color/grey"
+                android:textColorHint="@color/colorSearch"
                 android:textSize="@dimen/space_14"
                 android:textColor="@color/black"
                 android:hint="Password"
