--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:font="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -12,9 +12,11 @@
     card_view:cardUseCompatPadding="true" >
 
     <LinearLayout
+        android:background="@color/white"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_5">
 
 
         <RelativeLayout
@@ -67,17 +69,19 @@
                 android:layout_marginRight="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name="Label"
+                    font:name="GOTHAM_LIGHT"
+                    android:textSize="@dimen/space_12"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_3"
+                    android:layout_marginTop="@dimen/space_8"
                     android:layout_marginLeft="@dimen/space_5"
                     android:maxLines="1" />
 
                 <ui.CustomtextView
-                    font:name="Avenir_LightOblique"
+                    font:name="GOTHAM_LIGHT"
+                    android:textSize="@dimen/space_12"
                     android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
@@ -102,7 +106,7 @@
                 android:text="Ditolak"
                 android:textColor="#ffffff"
 
-                font:name="Avenir_Heavy"
+                font:name="GOTHAM_BOLD"
                 android:layout_gravity="right"
                 android:layout_centerVertical="true"
                 android:layout_alignRight="@+id/text_Date"
@@ -113,4 +117,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</RelativeLayout>
