--- a/app/src/main/res/layout/activity_distribusi.xml
+++ b/app/src/main/res/layout/activity_distribusi.xml
@@ -28,15 +28,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_50"
+                android:layout_height="@dimen/space_40"
                 android:layout_margin="@dimen/space_5">
 
                 <ui.CustomtextView
                     font:name="GOTHAM_BOLD"
                     android:text="Distribusi ke"
                     android:textColor="@color/white"
-                    android:background="@color/blu3"
-                    android:layout_width="110dp"
+                    android:background="@color/colorSearch"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:gravity="center" />
 
@@ -50,15 +50,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_50"
+                android:layout_height="@dimen/space_45"
                 android:layout_margin="@dimen/space_5">
 
                 <ui.CustomtextView
                     font:name="GOTHAM_BOLD"
                     android:text="CC"
                     android:textColor="@color/white"
-                    android:background="@color/blu3"
-                    android:layout_width="110dp"
+                    android:background="@color/colorSearch"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:gravity="fill_vertical"
                     android:paddingLeft="@dimen/space_10" />
