--- a/app/src/main/res/layout/row_disposisi_dalamproses.xml
+++ b/app/src/main/res/layout/row_disposisi_dalamproses.xml
@@ -132,7 +132,7 @@
             <RelativeLayout
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
-                android:background="@drawable/btn_shape_facebook"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
@@ -145,6 +145,7 @@
                 android:layout_alignBottom="@+id/btnDownload">
                 <ImageView
                     android:src="@drawable/info_32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25" />
 
@@ -153,7 +154,7 @@
                     android:layout_height="match_parent"
                     android:onClick="onClick"
                     android:text="lihat detail"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -169,7 +170,7 @@
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
@@ -182,6 +183,7 @@
                 android:layout_alignEnd="@+id/layout_attachment">
                 <ImageView
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
@@ -192,7 +194,7 @@
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="  lihat dokumen"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
