--- a/app/src/main/res/layout/row_disposisi_riwayat.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat.xml
@@ -140,7 +140,7 @@
                 android:id="@+id/btnDownload"
                 android:layout_width="115dp"
                 android:layout_height="@dimen/space_30"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:gravity="center"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
@@ -153,6 +153,7 @@
                 android:layout_marginTop="@dimen/space_3">
                 <ImageView
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_30" />
 
@@ -162,7 +163,7 @@
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="lihat dokumen"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
