--- a/app/src/main/res/layout/row_persuratan_dalamproses.xml
+++ b/app/src/main/res/layout/row_persuratan_dalamproses.xml
@@ -134,7 +134,7 @@
             <RelativeLayout
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
-                android:background="@drawable/btn_shape_facebook"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
@@ -148,6 +148,7 @@
                 <ImageView
                     android:id="@+id/imgInfo"
                     android:src="@drawable/info_32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25" />
 
@@ -157,7 +158,7 @@
                     android:layout_height="match_parent"
                     android:onClick="onClick"
                     android:text="lihat detail"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -173,7 +174,7 @@
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
@@ -187,6 +188,7 @@
                 <ImageView
                     android:id="@+id/imgDownload"
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
@@ -198,7 +200,7 @@
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="lihat surat"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
