--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -133,7 +133,7 @@
             <RelativeLayout
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
-                android:background="@drawable/btn_shape_facebook"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
@@ -146,6 +146,7 @@
                 android:layout_alignBottom="@+id/btnDownload">
                 <ImageView
                     android:src="@drawable/info_32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25" />
 
@@ -154,7 +155,7 @@
                     android:layout_height="match_parent"
                     android:onClick="onClick"
                     android:text="lihat detail"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -170,7 +171,7 @@
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
@@ -183,6 +184,7 @@
                 android:layout_width="103dp">
                 <ImageView
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
@@ -193,7 +195,7 @@
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="lihat surat"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
