--- a/app/src/main/res/layout/row_persuratan_pribadi.xml
+++ b/app/src/main/res/layout/row_persuratan_pribadi.xml
@@ -188,7 +188,7 @@
                 <ImageView
                     android:id="@+id/imgDownload"
                     android:src="@drawable/downloadsave32"
-                    android:tint="@color/grey"
+                    android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
