--- a/app/src/main/res/layout/row_persuratan_simpan.xml
+++ b/app/src/main/res/layout/row_persuratan_simpan.xml
@@ -148,7 +148,7 @@
                 <ImageView
                     android:src="@drawable/downloadsave32"
                     android:id="@+id/imgDownload"
-                    android:tint="@color/grey"
+                    android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
