--- a/app/src/main/res/layout/row_persuratan_simpan.xml
+++ b/app/src/main/res/layout/row_persuratan_simpan.xml
@@ -159,7 +159,7 @@
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="lihat surat"
-                    android:tint="@color/grey_s"
+                    android:textColor="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
                     android:id="@+id/textDownload"
