--- a/app/src/main/res/layout/row_bbs_semua_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_semua_pesanan.xml
@@ -64,7 +64,7 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:textSize="@dimen/space_12"
@@ -72,7 +72,6 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:textStyle="italic"
-                    android:layout_marginTop="-3dp"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
@@ -80,7 +79,7 @@
                     android:layout_marginRight="@dimen/space_5" />
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_size"
                     android:textSize="@dimen/space_12"
                     android:text="Attachemnt asdas asdas"
@@ -97,7 +96,7 @@
 
                 <ImageView
                     android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
+                    android:layout_height="@dimen/space_30"
                     android:id="@+id/imageView6"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
@@ -134,7 +133,6 @@
                 android:drawableLeft="@drawable/downloadsave32"
                 android:id="@+id/btnDownload"
                 android:background="@drawable/btn_shape_all_blue"
-                android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -154,7 +152,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:onClick="onClick"
                     android:text="  lihat dokumen"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/space_10"
