--- a/app/src/main/res/layout/row_disposisi_permohonan.xml
+++ b/app/src/main/res/layout/row_disposisi_permohonan.xml
@@ -64,13 +64,12 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:layout_marginTop="-2dp"
                     android:textSize="@dimen/space_12"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
@@ -96,7 +95,7 @@
 
                 <ImageView
                     android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
+                    android:layout_height="@dimen/space_30"
                     android:id="@+id/imageView6"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
@@ -133,7 +132,6 @@
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
                 android:background="@drawable/btn_shape_all_transparant_blue"
-                android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -152,7 +150,6 @@
                 <ui.CustomtextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:onClick="onClick"
                     android:text="lihat detail"
                     android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
@@ -171,7 +168,6 @@
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
                 android:background="@drawable/btn_shape_all_transparant_blue"
-                android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -192,7 +188,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:onClick="onClick"
                     android:text="  lihat dokumen"
                     android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
