--- a/app/src/main/res/layout/row_disposisi_riwayat.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat.xml
@@ -54,7 +54,7 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
@@ -62,7 +62,6 @@
                     android:textSize="@dimen/space_12"
                     android:maxLines="1"
                     android:textStyle="italic"
-                    android:layout_marginTop="-2dp"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
@@ -70,7 +69,7 @@
                     android:layout_marginLeft="@dimen/space_3"/>
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
 
                     android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
@@ -87,7 +86,7 @@
 
                 <ImageView
                     android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
+                    android:layout_height="@dimen/space_30"
                     android:id="@+id/imageView6"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
@@ -142,7 +141,6 @@
                 android:layout_height="@dimen/space_30"
                 android:background="@drawable/btn_shape_all_transparant_blue"
                 android:gravity="center"
-                android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -161,7 +159,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:onClick="onClick"
                     android:text="lihat dokumen"
                     android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
