--- a/app/src/main/res/layout/row_persuratan_dalamproses.xml
+++ b/app/src/main/res/layout/row_persuratan_dalamproses.xml
@@ -64,7 +64,7 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
@@ -72,7 +72,6 @@
                     android:textSize="@dimen/space_12"
                     android:maxLines="1"
                     android:textStyle="italic"
-                    android:layout_marginTop="-2dp"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
@@ -80,7 +79,7 @@
                     android:layout_marginLeft="@dimen/space_3"/>
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_size"
                     android:textSize="@dimen/space_12"
                     android:text="Attachemnt asdas asdas"
@@ -97,7 +96,7 @@
 
                 <ImageView
                     android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
+                    android:layout_height="@dimen/space_30"
                     android:id="@+id/imageView6"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
@@ -135,7 +134,6 @@
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
                 android:background="@drawable/btn_shape_all_transparant_blue"
-                android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -156,7 +154,6 @@
                     android:id="@+id/textInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:onClick="onClick"
                     android:text="lihat detail"
                     android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
@@ -175,7 +172,6 @@
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
                 android:background="@drawable/btn_shape_all_transparant_blue"
-                android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -198,7 +194,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:onClick="onClick"
                     android:text="lihat surat"
                     android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
