--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -64,7 +64,7 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
@@ -72,7 +72,6 @@
                     android:textSize="@dimen/space_12"
                     android:maxLines="1"
                     android:textStyle="italic"
-                    android:layout_marginTop="-2dp"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
@@ -80,7 +79,7 @@
                     android:layout_marginLeft="@dimen/space_3"/>
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHT"
+                    font:name = "GOTHAM_LIGHTITALIC"
 
                     android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
@@ -97,7 +96,7 @@
 
                 <ImageView
                     android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
+                    android:layout_height="@dimen/space_30"
                     android:id="@+id/imageView6"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
@@ -134,7 +133,6 @@
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
                 android:background="@drawable/btn_shape_all_transparant_blue"
-                android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -153,7 +151,6 @@
                 <ui.CustomtextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:onClick="onClick"
                     android:text="lihat detail"
                     android:tint="@color/grey"
                     android:textSize="@dimen/space_10"
@@ -172,7 +169,6 @@
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
                 android:background="@drawable/btn_shape_all_transparant_blue"
-                android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
@@ -193,7 +189,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:onClick="onClick"
                     android:text="lihat surat"
                     android:tint="@color/grey"
                     android:textSize="@dimen/space_10"
@@ -202,7 +197,6 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_toEndOf="@+id/imageView16"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="@dimen/space_20" />
