--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,8 +61,10 @@
 
             <ImageView
                 android:src="@drawable/gns_user"
-                android:layout_width="@dimen/space_40"
+                android:tint="@color/colorSearch"
+                android:layout_width="@dimen/space_20"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/space_5"
                 android:layout_marginTop="-2dp"
                 android:layout_marginBottom="-2dp" />
             <ui.CustomEditText
@@ -75,7 +77,7 @@
                 android:hint="Username"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/space_35" />
+                android:layout_marginLeft="@dimen/space_30" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -94,8 +96,10 @@
             android:layout_marginRight="@dimen/space_30">
             <ImageView
                 android:src="@drawable/gns_lock"
-                android:layout_width="@dimen/space_40"
-                android:layout_height="@dimen/space_40"
+                android:layout_width="@dimen/space_20"
+                android:tint="@color/colorSearch"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/space_5"
                 android:layout_marginBottom="-2dp"
                 android:layout_marginTop="-2dp" />
             <ui.CustomEditText
@@ -108,7 +112,7 @@
                 android:hint="Password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/space_35" />
+                android:layout_marginLeft="@dimen/space_30" />
 
             </RelativeLayout>
 
