--- a/app/src/main/res/layout/row_disposisi_umum.xml
+++ b/app/src/main/res/layout/row_disposisi_umum.xml
@@ -165,7 +165,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="lihat detail"
-                    android:textColor="@color/grey_s"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -205,7 +205,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="lihat surat"
-                    android:textColor="@color/grey_s"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
