--- a/app/src/main/res/layout/row_persuratan_simpan.xml
+++ b/app/src/main/res/layout/row_persuratan_simpan.xml
@@ -156,7 +156,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="lihat surat"
-                    android:textColor="@color/grey_s"
+                    android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
                     android:id="@+id/textDownload"
